# bacontools

./: .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CHANGELOG.md  CHECKLIST.md  EncodingConverter.sln  ImageValidator.sln  LICENSE  Makefile  NOTES.md  PKGBUILD  README.md  TODO.md  TOOLS.md  bacontools.7  maturity.txt  setup.py
EncodingConverter/: EncodingConverter.cs  EncodingConverter.csproj
ImageValidator/: ImageValidator.DirectoryExtensions.cs  ImageValidator.MainClass.cs  ImageValidator.MimeRetriever.cs  ImageValidator.csproj
checkreboot/: README.md  checkreboot
docs/: TODO.v0.1.md  TODO.v1.0.md  termdraw.1  termdraw.3
git/: Makefile  README.md
linux/: Makefile  README.md
media/: Makefile  README.md
miniscripts/: README.md  batch  fish_most_used  git-ls-sorted  humansizels  moviegifs  peakbitrate  s
misc/: Makefile  README.md  tasks.sh
netinfo/: netinfo
patches/: 0001-don-t-install-bananaglee-when-there-s-no-runghc.patch  0001-no-haskell.patch  0002-don-t-run-Bundler-when-it-s-problematic.patch  0002-install-nokogiri-outside-of-Makefiles.patch  apply  check
preptrack/: README.md  preptrack
snippets/: shell.md  vagrant.md
soreutils/: CMakeLists.txt
soreutils/balance/: README.md
soreutils/bitdiff/: CMakeLists.txt
soreutils/byteat/: README.md
soreutils/maybe/: CMakeLists.txt  maybe.c
soreutils/n7m/: README.md  n7m.c
termdraw/: cli.py  csv.py  graph.py  interpolate.py  termdraw.py  terminal.py
text/: Makefile  README.md
update-all/: README.md  update-all
vidinfo/: README.md  vidinfo
web/: Makefile  README.md
(+233 files in other folders)
