CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(soreutils)
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/balance")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/bitdiff")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/byteat")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/corrupt")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/maybe")
ADD_SUBDIRECTORY("${PROJECT_SOURCE_DIR}/n7m")
